traversal.snake.Snake.scala.error
Compilation error:
Snake:26: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((estFaceMur()==true )&& (getDirection()== Direction.NORD))
  ^